--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ plotly = "^5.10.0"
 scikit-learn = "^1.1.2"
 pytorch-lightning = "^1.7.7"
 torchvision = "^0.13.1"
+optuna = "^3.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
