--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "wandb-tutorial"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
+packages = [
+    { include = "src" },
+]
 
 [tool.poetry.dependencies]
 python = "3.8.12"
